--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="row">
 
                 <h1>{{ goal }}</h1>
+                <img src= "@vue.png" alt="">
 
             </div>
     </div>
