--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row">
 
                 <h1>{{ goal }}</h1>
-                <img src= "@vue.png" alt="">
+                <img v-bind:src = "immagine" alt="">
 
             </div>
     </div>
